一部の処理をQuiz側に移動