@@ -32,34 +32,8 @@ public class AnswerQuestionCommand implements CommandExecutor {
 		if (args.length != 1) {
 			return false;
 		}
-		try {
-			int index = Math.abs(Integer.parseInt(args[0]));
-			String defaultMessage = index + "番目の答え";
-			new AnvilGUI.Builder()
-					.onClick((slot, stateSnapshot) -> {
-						if (slot != AnvilGUI.Slot.OUTPUT) {
-							return Collections.emptyList();
-						}
-						if (Objects.equals(stateSnapshot.getText(), defaultMessage)) {
-							return Collections.emptyList();
-						}
 
-						boolean isSucceeded = PanelQuiz.getInstance().processingQuiz.answerQuestion(index, sender.getName(), stateSnapshot.getText());
-						if (isSucceeded) {
-							sender.sendMessage(ChatColor.GREEN + "「" + stateSnapshot.getText() + "」と回答しました");
-						} else {
-							sender.sendMessage(ChatColor.RED + "正しく入力されていません");
-						}
-						return List.of(AnvilGUI.ResponseAction.close());
-					})
-					.text(defaultMessage)
-					.title(PanelQuiz.getInstance().processingQuiz.question)
-					.plugin(PanelQuiz.getInstance())
-					.open((Player) sender);
-			return true;
-		} catch (NumberFormatException e) {
-			sender.sendMessage(ChatColor.RED + "無効な数値です");
-			return true;
-		}
+		PanelQuiz.getInstance().processingQuiz.handleAnswerCommand(sender, Arrays.asList(args));
+		return true;
 	}
 }
